--- a/src/main/resources/com/example/zoosystem/values/HomePage.css
+++ b/src/main/resources/com/example/zoosystem/values/HomePage.css
@@ -1,7 +1,13 @@
-.nav-btn{
+.btn{
     -fx-background-color: transparent;
     -fx-border-width: 1px;
     -fx-cursor: hand;
+}
+.nav-btn{
+    -fx-background-color: #4b8a3d;
+    -fx-cursor: hand;
+    -fx-text-fill: black;
+    -fx-font-size: 14px;
 }
 .nav-btn:hover{
     -fx-background-color: linear-gradient(to bottom right, #e2f3c9, #4b8a3d);
@@ -15,4 +21,10 @@
 }
 .white-bg{
     -fx-background-color: #fff;
+}
+.pane{
+    -fx-background-color: #81bf6e;
+}
+.radius{
+    -fx-background-radius: 8px;
 }
