--- a/src/main/resources/com/example/zoosystem/Animals.fxml
+++ b/src/main/resources/com/example/zoosystem/Animals.fxml
@@ -1,75 +1,187 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="AnimalsPane" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zoosystem.AnimalsController">
+<AnchorPane fx:id="AnimalsPane" prefHeight="800.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zoosystem.AnimalsController">
    <children>
-      <StackPane layoutX="6.0" layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1440.0">
+      <StackPane layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1446.0">
          <children>
             <AnchorPane prefHeight="799.0" prefWidth="1440.0">
                <children>
-                  <AnchorPane layoutX="-6.0" layoutY="-2.0" prefHeight="93.0" prefWidth="1446.0" style="-fx-background-color: #4b8a3d;" stylesheets="@values/HomePage.css">
+                  <AnchorPane layoutX="-6.0" layoutY="-2.0" prefHeight="93.0" prefWidth="1453.0" style="-fx-background-color: #4b8a3d;" stylesheets="@values/HomePage.css">
                      <children>
-                        <Button layoutX="1130.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToVisitors" prefHeight="42.0" prefWidth="91.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Visitors">
+                        <Button layoutX="1130.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToVisitors" prefHeight="42.0" prefWidth="91.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Visitors">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Button layoutX="699.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToAnimals" prefHeight="42.0" prefWidth="90.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Animals">
+                        <Button layoutX="699.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToAnimals" prefHeight="42.0" prefWidth="90.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Animals">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Button layoutX="799.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToEnclosures" prefHeight="42.0" prefWidth="106.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Enclosures">
+                        <Button layoutX="799.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToEnclosures" prefHeight="42.0" prefWidth="106.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Enclosures">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Button layoutX="1041.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToEvents" prefHeight="42.0" prefWidth="80.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Events">
+                        <Button layoutX="1041.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToEvents" prefHeight="42.0" prefWidth="80.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Events">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Button layoutX="1235.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToTickets" prefHeight="42.0" prefWidth="80.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Tickets">
+                        <Button layoutX="1235.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToTickets" prefHeight="42.0" prefWidth="80.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Tickets">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Button layoutX="1323.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToEmployees" prefHeight="42.0" prefWidth="109.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Employees">
+                        <Button layoutX="1323.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToEmployees" prefHeight="42.0" prefWidth="109.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Employees">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Button layoutX="912.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToAnimalCare" prefHeight="42.0" prefWidth="118.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Animal Care">
+                        <Button layoutX="912.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToAnimalCare" prefHeight="42.0" prefWidth="118.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Animal Care">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Label layoutX="27.0" layoutY="14.0" prefHeight="64.0" prefWidth="530.0" text="Moodeng Zoo management System">
+                        <Label layoutX="27.0" layoutY="14.0" prefHeight="64.0" prefWidth="261.0" text="Moodeng ZooMS">
                            <font>
                               <Font name="Microsoft Tai Le Bold" size="31.0" />
                            </font>
                         </Label>
                      </children>
                   </AnchorPane>
-                  <ScrollPane hbarPolicy="NEVER" layoutY="91.0" prefHeight="708.0" prefWidth="1440.0" vbarPolicy="NEVER">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1626.0" prefWidth="1440.0">
+                  <AnchorPane layoutX="-2.0" layoutY="92.0" prefHeight="707.0" prefWidth="1447.0">
+                     <children>
+                        <AnchorPane layoutX="14.0" layoutY="14.0" prefHeight="679.0" prefWidth="375.0" stylesheets="@values/HomePage.css">
                            <children>
-                              <Label layoutX="304.0" layoutY="189.0" prefHeight="93.0" prefWidth="283.0" text="Animals">
+                              <Label layoutX="41.0" layoutY="35.0" prefHeight="32.0" prefWidth="91.0" text="Animal ID:">
                                  <font>
-                                    <Font size="39.0" />
+                                    <Font name="Tahoma" size="18.0" />
                                  </font>
                               </Label>
+                              <Label layoutX="18.0" layoutY="80.0" prefHeight="32.0" prefWidth="109.0" text="Enclosure ID:">
+                                 <font>
+                                    <Font name="Tahoma" size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="73.0" layoutY="124.0" prefHeight="32.0" prefWidth="54.0" text="Name:">
+                                 <font>
+                                    <Font name="Tahoma" size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="19.0" layoutY="168.0" prefHeight="32.0" prefWidth="108.0" text="Date of Birth:">
+                                 <font>
+                                    <Font name="Tahoma" size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="60.0" layoutY="212.0" prefHeight="32.0" prefWidth="68.0" text="Species:">
+                                 <font>
+                                    <Font name="Tahoma" size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="91.0" layoutY="257.0" prefHeight="32.0" prefWidth="35.0" text="Sex:">
+                                 <font>
+                                    <Font name="Tahoma" size="18.0" />
+                                 </font>
+                              </Label>
+                              <TextField layoutX="156.0" layoutY="35.0" prefHeight="32.0" prefWidth="187.0" />
+                              <TextField layoutX="156.0" layoutY="80.0" prefHeight="32.0" prefWidth="187.0" />
+                              <TextField layoutX="156.0" layoutY="124.0" prefHeight="32.0" prefWidth="187.0" />
+                              <TextField layoutX="156.0" layoutY="168.0" prefHeight="32.0" prefWidth="187.0" />
+                              <TextField layoutX="156.0" layoutY="212.0" prefHeight="32.0" prefWidth="187.0" />
+                              <TextField layoutX="156.0" layoutY="298.0" prefHeight="32.0" prefWidth="187.0" />
+                              <Label layoutX="90.0" layoutY="300.0" prefHeight="32.0" prefWidth="39.0" text="Age:">
+                                 <font>
+                                    <Font name="Tahoma" size="18.0" />
+                                 </font>
+                              </Label>
+                              <ComboBox layoutX="156.0" layoutY="257.0" prefHeight="25.0" prefWidth="188.0" />
+                              <Label layoutX="71.0" layoutY="344.0" prefHeight="32.0" prefWidth="57.0" text="Status:">
+                                 <font>
+                                    <Font name="Tahoma" size="18.0" />
+                                 </font>
+                              </Label>
+                              <TextField layoutX="156.0" layoutY="344.0" prefHeight="32.0" prefWidth="187.0" />
+                              <Button layoutX="28.0" layoutY="420.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="146.0" stylesheets="@values/HomePage.css" text="Add">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                                 <styleClass>
+                                    <String fx:value="nav-btn" />
+                                    <String fx:value="radius" />
+                                 </styleClass>
+                              </Button>
+                              <Button layoutX="200.0" layoutY="507.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="146.0" stylesheets="@values/HomePage.css" text="Delete">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                                 <styleClass>
+                                    <String fx:value="nav-btn" />
+                                    <String fx:value="radius" />
+                                 </styleClass>
+                              </Button>
+                              <Button layoutX="28.0" layoutY="507.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="146.0" stylesheets="@values/HomePage.css" text="Clear">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                                 <styleClass>
+                                    <String fx:value="nav-btn" />
+                                    <String fx:value="radius" />
+                                 </styleClass>
+                              </Button>
+                              <Button layoutX="200.0" layoutY="420.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="146.0" stylesheets="@values/HomePage.css" text="Update">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                                 <styleClass>
+                                    <String fx:value="nav-btn" />
+                                    <String fx:value="radius" />
+                                 </styleClass>
+                              </Button>
+                           </children>
+                           <styleClass>
+                              <String fx:value="radius" />
+                              <String fx:value="white-bg" />
+                              <String fx:value="shadow" />
+                           </styleClass>
+                        </AnchorPane>
+                        <AnchorPane layoutX="402.0" layoutY="14.0" prefHeight="679.0" prefWidth="1027.0" stylesheets="@values/HomePage.css">
+                           <styleClass>
+                              <String fx:value="white-bg" />
+                              <String fx:value="radius" />
+                              <String fx:value="shadow" />
+                           </styleClass>
+                           <children>
+                              <TableView layoutX="8.0" layoutY="8.0" prefHeight="665.0" prefWidth="1011.0">
+                                <columns>
+                                  <TableColumn prefWidth="75.0" text="Animal ID" />
+                                  <TableColumn prefWidth="75.0" text="Enclosure ID" />
+                                    <TableColumn prefWidth="75.0" text="Name" />
+                                    <TableColumn prefWidth="75.0" text="Date of Birth" />
+                                    <TableColumn prefWidth="75.0" text="Species" />
+                                    <TableColumn prefWidth="75.0" text="Sex" />
+                                    <TableColumn prefWidth="75.0" text="Age" />
+                                    <TableColumn prefWidth="75.0" text="Status" />
+                                </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
                            </children>
                         </AnchorPane>
-                     </content>
-                  </ScrollPane>
+                     </children>
+                  </AnchorPane>
                </children>
             </AnchorPane>
          </children>
