--- a/src/main/resources/com/example/zoosystem/HomePage.fxml
+++ b/src/main/resources/com/example/zoosystem/HomePage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -10,46 +11,45 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="HomePagePane" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zoosystem.HomePageController">
+<AnchorPane fx:id="HomePagePane" prefHeight="800.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zoosystem.HomePageController">
    <children>
       <StackPane layoutX="6.0" layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1440.0">
          <children>
-            <AnchorPane prefHeight="799.0" prefWidth="1440.0">
+            <AnchorPane prefHeight="1800.0" prefWidth="1440.0">
                <children>
                   <AnchorPane layoutX="-6.0" layoutY="-2.0" prefHeight="93.0" prefWidth="1446.0" style="-fx-background-color: #4b8a3d;" stylesheets="@values/HomePage.css">
                      <children>
-                        <Button layoutX="1130.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToVisitors" prefHeight="42.0" prefWidth="91.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Visitors">
+                        <Button layoutX="1130.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToVisitors" prefHeight="42.0" prefWidth="91.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Visitors">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Button layoutX="699.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToAnimals" prefHeight="42.0" prefWidth="90.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Animals">
+                        <Button layoutX="699.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToAnimals" prefHeight="42.0" prefWidth="90.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Animals">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Button layoutX="799.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToEnclosures" prefHeight="42.0" prefWidth="106.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Enclosures">
+                        <Button layoutX="799.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToEnclosures" prefHeight="42.0" prefWidth="106.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Enclosures">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Button layoutX="1041.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToEvents" prefHeight="42.0" prefWidth="80.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Events">
+                        <Button layoutX="1041.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToEvents" prefHeight="42.0" prefWidth="80.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Events">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Button layoutX="1235.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToTickets" prefHeight="42.0" prefWidth="80.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Tickets">
+                        <Button layoutX="1235.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToTickets" prefHeight="42.0" prefWidth="80.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Tickets">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Button layoutX="1323.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToEmployees" prefHeight="42.0" prefWidth="109.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Employees">
+                        <Button layoutX="1323.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToEmployees" prefHeight="42.0" prefWidth="109.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Employees">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Button layoutX="912.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToAnimalCare" prefHeight="42.0" prefWidth="118.0" styleClass="nav-btn" stylesheets="@values/HomePage.css" text="Animal Care">
+                        <Button layoutX="912.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToAnimalCare" prefHeight="42.0" prefWidth="118.0" styleClass="btn" stylesheets="@values/HomePage.css" text="Animal Care">
                            <font>
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
@@ -61,18 +61,18 @@
                         </Label>
                      </children>
                   </AnchorPane>
-                  <ScrollPane hbarPolicy="NEVER" layoutY="91.0" prefHeight="708.0" prefWidth="1440.0" vbarPolicy="NEVER">
+                  <ScrollPane hbarPolicy="NEVER" layoutY="91.0" prefHeight="709.0" prefWidth="1440.0" vbarPolicy="NEVER">
                     <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1626.0" prefWidth="1440.0">
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1800.0" prefWidth="1440.0">
                            <children>
-                              <ImageView fitHeight="549.0" fitWidth="1475.0" layoutX="-21.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="544.0" fitWidth="1443.0" layoutX="-6.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@images/ZOO.png" />
                                  </image>
                               </ImageView>
-                              <Pane layoutY="540.0" prefHeight="581.0" prefWidth="1438.0" styleClass="white-bg" stylesheets="@values/HomePage.css">
+                              <Pane layoutY="540.0" prefHeight="533.0" prefWidth="1438.0" styleClass="white-bg" stylesheets="@values/HomePage.css">
                                  <children>
-                                    <Label layoutX="52.0" layoutY="30.0" prefHeight="78.0" prefWidth="176.0" text="Welcome to">
+                                    <Label layoutX="52.0" layoutY="30.0" prefHeight="78.0" prefWidth="183.0" text="Welcome to">
                                        <font>
                                           <Font name="Bodoni MT" size="36.0" />
                                        </font>
@@ -112,7 +112,7 @@
                                           <Image url="@images/moodeng.jpg" />
                                        </image>
                                     </ImageView>
-                                    <Pane layoutX="890.0" layoutY="385.0" prefHeight="136.0" prefWidth="521.0" style="-fx-background-color: #81bf6e; -fx-background-radius: 8;" stylesheets="@values/HomePage.css">
+                                    <Pane layoutX="890.0" layoutY="385.0" prefHeight="136.0" prefWidth="521.0" stylesheets="@values/HomePage.css">
                                        <children>
                                           <Label layoutX="6.0" layoutY="-4.0" prefHeight="36.0" prefWidth="141.0" text="Name: Moodeng">
                                              <font>
@@ -135,9 +135,63 @@
                                              </font>
                                           </Label>
                                        </children>
+                                       <styleClass>
+                                          <String fx:value="pane" />
+                                          <String fx:value="radius" />
+                                       </styleClass>
                                     </Pane>
                                  </children>
                               </Pane>
+                              <Label layoutX="424.0" layoutY="81.0" prefHeight="78.0" prefWidth="593.0" text="Welcome to Moodeng ZooMS">
+                                 <font>
+                                    <Font name="Bodoni MT" size="48.0" />
+                                 </font>
+                              </Label>
+                              <AnchorPane layoutX="-1.0" layoutY="1075.0" prefHeight="632.0" prefWidth="1440.0" styleClass="white-bg" stylesheets="@values/HomePage.css">
+                                 <children>
+                                    <Pane layoutX="14.0" layoutY="26.0" prefHeight="272.0" prefWidth="418.0" stylesheets="@values/HomePage.css">
+                                       <styleClass>
+                                          <String fx:value="pane" />
+                                          <String fx:value="radius" />
+                                       </styleClass>
+                                       <children>
+                                          <ImageView fitHeight="216.0" fitWidth="216.0" layoutX="14.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@images/user.png" />
+                                             </image>
+                                          </ImageView>
+                                          <Label layoutX="221.0" layoutY="180.0" prefHeight="64.0" prefWidth="183.0" text="Total Number of Visitors">
+                                             <font>
+                                                <Font name="Impact" size="18.0" />
+                                             </font>
+                                          </Label>
+                                          <Label alignment="CENTER_RIGHT" layoutX="237.0" layoutY="43.0" prefHeight="50.0" prefWidth="167.0" text="0">
+                                             <font>
+                                                <Font size="18.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </Pane>
+                                    <Pane layoutX="449.0" layoutY="26.0" prefHeight="272.0" prefWidth="418.0" stylesheets="@values/HomePage.css">
+                                       <styleClass>
+                                          <String fx:value="pane" />
+                                          <String fx:value="radius" />
+                                       </styleClass>
+                                    </Pane>
+                                    <Pane layoutX="14.0" layoutY="316.0" prefHeight="272.0" prefWidth="418.0" stylesheets="@values/HomePage.css">
+                                       <styleClass>
+                                          <String fx:value="pane" />
+                                          <String fx:value="radius" />
+                                       </styleClass>
+                                    </Pane>
+                                    <Pane layoutX="449.0" layoutY="316.0" prefHeight="272.0" prefWidth="418.0" stylesheets="@values/HomePage.css">
+                                       <styleClass>
+                                          <String fx:value="pane" />
+                                          <String fx:value="radius" />
+                                       </styleClass>
+                                    </Pane>
+                                 </children>
+                              </AnchorPane>
                            </children>
                         </AnchorPane>
                     </content>
