--- a/src/main/resources/com/example/zoosystem/Tickets.fxml
+++ b/src/main/resources/com/example/zoosystem/Tickets.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="TicketsPane" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zoosystem.TicketsController">
+<AnchorPane fx:id="TicketsPane" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zoosystem.TicketsController">
    <children>
       <StackPane layoutX="6.0" layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1440.0">
          <children>
@@ -50,7 +50,7 @@
                               <Font name="Segoe UI Black" size="16.0" />
                            </font>
                         </Button>
-                        <Label layoutX="27.0" layoutY="14.0" prefHeight="64.0" prefWidth="530.0" text="Moodeng Zoo management System">
+                        <Label layoutX="27.0" layoutY="14.0" prefHeight="64.0" prefWidth="259.0" text="Moodeng ZooMS">
                            <font>
                               <Font name="Microsoft Tai Le Bold" size="31.0" />
                            </font>
